Fix img overflow

--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,12 @@
+.page {
+  margin: 0;
+  box-sizing: border-box;
+}
 
+.full-img {
+  display: block;
+  max-width: 100%;
+  width: 100%;
+}
 
 /*# sourceMappingURL=main.css.map */
